load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["event_generator.go"],
    importpath = "github.com/praveenbkec/eventgenerator/bechmark",
    visibility = ["//visibility:private"],
    deps = [
        "//consumer/proto:proto_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bechmark",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["eventgenerator_test.go"],
    embed = [":go_default_library"],
)
