load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "event_listener.go",
        "event_mgmt.go",
    ],
    importpath = "github.com/praveenbkec/eventgenerator/consumer/pkg/eventconsumer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_lib_pq//:go_default_library",
        "@com_github_segmentio_kafka_go//:go_default_library",
    ],
)
