load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "eventgenerator/consumer/src/eventconsumer",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_lib_pq//:go_default_library",
        "@com_github_segmentio_kafka_go//:go_default_library",
    ],
)

go_binary(
    name = "eventconsumer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "latest",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/eventconsumer"],
    files = [":eventconsumer"],
)
