load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "event_listener.go",
        "event_mgmt.go",
    ],
    importpath = "github.com/praveenbkec/eventgenerator/consumer/src/eventconsumer",
    visibility = ["//visibility:private"],
    deps = ["@com_github_segmentio_kafka_go//:go_default_library"],
)

go_binary(
    name = "eventconsumer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
