load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["event_rpc.go"],
    importpath = "github.com/praveenbkec/eventgenerator/consumer/src/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//consumer/proto:proto_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
